# webui-service

./: .gitignore  Main.hs  index.html  readme.md  webui.cabal
src/: Main.hs  Types.hs
