name:                webui-service
version:             0.1.0.0
synopsis:            A simple web ui
description:         A simple web ui
license:             BSD2
license-file:        LICENSE
author:              Jochen Keil
maintainer:          Jochen Keil <jochen.keil+webui-service@gmail.com>
homepage:            http://github.com/jotrk/webui-service/
bug-reports:         http://github.com/jotrk/webui-service/issues

category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/jotrk/webui-service.git

executable webui-service
  main-is:           Main.hs

  build-depends:     base   >= 4.7 && < 4.8,
                     aeson  >= 0.8 && < 0.9,
                     scotty >= 0.9 && < 0.10,
                     text   >= 1.2 && < 1.3,
                     warp   >= 3.0 && < 3.1

  default-language:  Haskell2010
  ghc-options:       -Wall
  hs-source-dirs:    src
